1.3.6 - Fix alignment of meta on widgets

--- a/style-rtl.css
+++ b/style-rtl.css
@@ -4,7 +4,7 @@ Theme URI: https://upthemes.com/themes/uplifted/
 Description: Uplifted Theme is a theme for churches and ministries.
 Author: UpThemes
 Author URI: https://upthemes.com/
-Version: 1.3.5
+Version: 1.3.6
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Tags: light, gray, white, one-column, two-columns, right-sidebar, custom-background, custom-header, custom-menu, featured-images, full-width-template, microformats, post-formats, rtl-language-support, sticky-post, theme-options, translation-ready, responsive-layout, fluid-layout
@@ -2872,8 +2872,7 @@ p.comment-form-comment label.error {
   font-size: 1em; }
 
 .uplifted-widget-entry-meta > li {
-  display: inline-block;
-  vertical-align: top; }
+  display: inline-block; }
   .uplifted-widget-entry-meta > li a {
     white-space: nowrap; }
 
